[package]
name = "ld_script"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "macro_expander"
path = "macro_expander.rs"

[features]
macros = ["ld_script_macros"]

[dependencies]
ld_script_macros = { path = "ld_script_macros", optional = true }
